feat(machine) create machine class - write test for machine class - fix failing test

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["stage-1"],
+  "presets": ["es2015", "stage-1"],
   "env": {
     "plugins": ["transform-class-properties", "transform-object-rest-spread"]
   }
