--- a/package.json
+++ b/package.json
@@ -27,6 +27,22 @@
     "test": "jest",
     "shc": "open coverage/lcov-report/index.html"
   },
+  "jest": {
+    "globals": {
+      "NODE_ENV": "test"
+    },
+
+    "testMatch": ["**/__tests__/**/*.js?(x)", "**/?*.(spec|test).js?(x)"],
+
+    "testPathIgnorePatterns": [
+      "<rootDir>[/\\\\](build|docs|node_modules|scripts)[/\\\\]"
+    ],
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest"
+    },
+    "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"]
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "jest": "^22.4.3"
